# rules_oci_repro

./: .bazelrc  BUILD.bazel  MODULE.bazel  rules_oci.patch
